name:                MinPS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MinPS#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           2018 Author name here
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable MinPS
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , containers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
  other-modules:       Language.MinPS.Syntax
                     , Language.MinPS.Value
                     , Language.MinPS.Environment
                     , Language.MinPS.Eval
                     , Language.MinPS.Normalize
                     , Language.MinPS.Equals
                     , Language.MinPS.Check
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2
